manifests/prd/authelia/ReferenceGrant-forward-auth.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: forward-auth
  namespace: authelia
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: monitoring
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: kube-system
  to:
    - group: ""
      kind: Service
      name: authelia
