manifests/prd/authelia/Deployment-authelia.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia
  name: authelia
  namespace: authelia
spec:
  minReadySeconds: 0
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/instance: authelia
      app.kubernetes.io/name: authelia
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        authelia.com/checksum-config: 09989470814ccd2e2274787cbefce163df4a1ed4c9cb2e99fd5e10c943ec671c
      labels:
        app.kubernetes.io/instance: authelia
        app.kubernetes.io/name: authelia
    spec:
      affinity:
        nodeAffinity: {}
        podAffinity: {}
        podAntiAffinity: {}
      containers:
        - command:
            - authelia
          image: ghcr.io/authelia/authelia:4.39.24
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: authelia
          ports:
            - containerPort: 9091
              name: http
              protocol: TCP
            - containerPort: 9959
              name: metrics
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 64Mi
          startupProbe:
            failureThreshold: 6
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /config
              name: authelia
              readOnly: false
            - mountPath: /configuration.yaml
              name: config
              readOnly: true
              subPath: configuration.yaml
            - mountPath: /secrets/internal
              name: secrets
              readOnly: true
            - mountPath: /secrets/authelia-extra
              name: secret-authelia-extra
              readOnly: true
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      volumes:
        - name: authelia
          persistentVolumeClaim:
            claimName: authelia
        - configMap:
            items:
              - key: configuration.yaml
                path: configuration.yaml
            name: authelia
          name: config
        - name: secrets
          secret:
            items:
              - key: identity_validation.reset_password.jwt.hmac.key
                path: identity_validation.reset_password.jwt.hmac.key
              - key: session.encryption.key
                path: session.encryption.key
              - key: notifier.smtp.password.txt
                path: notifier.smtp.password.txt
              - key: storage.encryption.key
                path: storage.encryption.key
              - key: identity_providers.oidc.hmac.key
                path: identity_providers.oidc.hmac.key
            secretName: authelia-secrets
        - name: secret-authelia-extra
          secret:
            secretName: authelia-extra
