manifests/prd/authelia/StatefulSet-authelia-valkey.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authelia-valkey
  namespace: authelia
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: authelia-valkey
  serviceName: authelia-valkey
  template:
    metadata:
      labels:
        app.kubernetes.io/name: authelia-valkey
    spec:
      containers:
        - image: docker.io/valkey/valkey:9.1.2@sha256:418652cfb58ef879d4978c33553735d7147016032d5aefaa14c828e611eb9dfd
          name: valkey
          ports:
            - containerPort: 6379
              name: redis
          resources:
            limits:
              memory: 64Mi
            requests:
              cpu: 10m
              memory: 32Mi
          volumeMounts:
            - mountPath: /data
              name: data
      securityContext:
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 999
        runAsNonRoot: true
        runAsUser: 999
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: miroir
