manifests/prd/authelia/Service-authelia-valkey.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia-valkey
  namespace: authelia
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/name: authelia-valkey
