manifests/prd/authelia/Service-authelia.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia
  name: authelia
  namespace: authelia
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: metrics
      port: 9959
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia
  sessionAffinity: None
  type: ClusterIP
