manifests/prd/authelia/HTTPRoute-authelia.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    home-ops.dev/public-dns: "true"
  name: authelia
  namespace: authelia
spec:
  hostnames:
    - auth.kidibox.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cloudflare-tunnel
      namespace: cloudflare-tunnel-system
      sectionName: http
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: authelia
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
