manifests/prd/authelia/CiliumNetworkPolicy-authelia-valkey.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authelia-valkey
  namespace: authelia
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authelia-valkey
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: authelia
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
