manifests/prd/authelia/CiliumNetworkPolicy-authelia.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authelia
  namespace: authelia
spec:
  egress:
    - toFQDNs:
        - matchName: smtp.gmail.com
      toPorts:
        - ports:
            - port: "587"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authelia
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: envoy
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "9091"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudflare-tunnel-gateway-controller-proxy
            k8s:io.kubernetes.pod.namespace: cloudflare-tunnel-system
      toPorts:
        - ports:
            - port: "9091"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vmagent
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9959"
              protocol: TCP
